--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -17,7 +17,9 @@ $textColor: #050404;
 $communityColor: rgb(219, 237, 248); //hex: #DBEDF8 // rgba(0, 130, 201, 0.14)
 $successColor: #42E553;
 $successBGColor: #00ce48;
+$labelColor: #ffc28d;
 $errorColor: #FE5252;
+$warningColor: #ffe3b0;
 $youtube: #FF0000;
 $lightBG: rgba(0,130,201,0.14);
 $borderRadius:15px;
