--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -17,12 +17,12 @@ $textColor: #050404;
 $communityColor: rgb(219, 237, 248); //hex: #DBEDF8 // rgba(0, 130, 201, 0.14)
 $successColor: #42E553;
 $successBGColor: #00ce48;
+$starsColor: #f49d07;
 $labelColor: #ffc28d;
 $errorColor: #FE5252;
 $warningColor: #ffe3b0;
 $youtube: #FF0000;
 $lightBG: rgba(0,130,201,0.14);
-
 $boxShadow: 0 0 25px rgba(0,130, 201, 0.12);
 $youtubeColor: #c4302b;
 $blueGradient: linear-gradient(45deg, #0082c9 20%, #1cafff);
