--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -22,9 +22,14 @@ $errorColor: #FE5252;
 $warningColor: #ffe3b0;
 $youtube: #FF0000;
 $lightBG: rgba(0,130,201,0.14);
-$borderRadius:15px;
-$borderRadiusLarger:25px;
+
 $boxShadow: 0 0 25px rgba(0,130, 201, 0.12);
 $youtubeColor: #c4302b;
 $blueGradient: linear-gradient(45deg, #0082c9 20%, #1cafff);
 $blueGradient2: linear-gradient(45deg, #0082c9, #1CAFFF);
+$pageHeroGradient: linear-gradient(45deg, #0082c9 20%, rgba(0, 130, 201, 0.15));
+$lightBlueGradient: linear-gradient(45deg, #DBEDF8 20%, rgba(0, 130, 201, 0.1));
+$borderRadius: 8px;
+$borderRadiusSmall: 5px;
+$borderRadiusSection:15px;
+$borderRadiusLarger:25px;
